--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 180px;
+  gap: 200px;
   padding-bottom: 22px;
   border-bottom: 0.5px solid aliceblue;
 }
@@ -186,7 +186,7 @@ nav {
 }
 
 .contact-text{
-  font-size: 19px;
+  font-size: 18px;
   padding-top: 40px;
   padding-left: 44px;
   color:  aliceblue;
@@ -194,7 +194,7 @@ nav {
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.05em;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 .social-logos{
@@ -202,14 +202,14 @@ nav {
   margin-left: 47px;
   display: flex;
   justify-content:left;
-  gap: 27px;
+  gap: 24px;
 }
 
 .abhiraj-ftr{
   font-family: "Press Start 2P", system-ui;
   font-weight: 400;
   font-style: normal;
-  font-size: 7px;
+  font-size: 8px;
   margin-top: 90px;
   color: aliceblue;
   text-align: center;
