--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,15 @@ nav {
   padding-bottom: 21px;
   text-transform: capitalize;
 }
+
+
+.message{
+  color: aliceblue;
+ display: grid;
+ justify-content: center;
+  font-size: 15px;
+ font-weight: 400;
+ font-family: "Ubuntu Mono", monospace;
+ margin-top: 30px;
+
+}
