--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Strait&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
+
+@media only screen and (max-width: 600px) {
 body {
   margin: 0;
   line-height: normal;
@@ -229,5 +231,7 @@ nav {
  font-weight: 400;
  font-family: "Ubuntu Mono", monospace;
  margin-top: 30px;
+
+}
 
 }
